Small changes to nav appearance

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Topbar */
-#nav
+#top
 {
 	float: right;
 }
@@ -15,12 +15,13 @@ ul
 	list-style-type: none; 
 }
 
-ul, li
+li
+
 {
-	display: inline-block;
+	/* margin: 0 15px 0 0; */
 }
 
-#nav li a
+li a
 
 {
 	color: grey;
@@ -55,13 +56,18 @@ ul, li
 	display: inline-block;
 	color: white;
 	padding: 6px 9px 6px 9px;
+	font-weight: bold;
 }
 
 #sign a:hover
 {
-	cursor: default;
+	cursor: default; 
 }
 
+#sign a:active
+{
+	background-color: #0066CC;
+}
 
 /* Body */
 body
@@ -104,6 +110,7 @@ body
 }
 .search input
 {
+
 	border: solid 1px;
 	border-color: grey;
 	padding-left: 10px;
@@ -142,67 +149,4 @@ button:hover
 button:focus
 {
 	border-color: #0000ff;
-}
-
-#french
-{
-	position: relative;
-	top: 50px;
-	letter-spacing: 1px;
-	font-family: Arial;
-	font-size: 12px; 
-}
-
-#french a
-{
-	text-decoration: none;
-}
-
-#french a:hover
-{
-	text-decoration: underline;
-}
-
-/* Footer */
-
-#footer
-{
-	position: fixed;
-	bottom: 0px;
-	background-color:#f2f2f2;
-	width: 100%;
-}
-
-.left
-{
-	float: left;
-}
-
-.right
-{
-	float: right;
-}
-
-.left li a
-{
-	margin-right: 25px;
-}
-
-.right li a
-{
-	margin-right: 25px;
-}
-
-#footer li a
-{
-	color: grey;
-	text-decoration: none;
-	letter-spacing: 1px;
-	font-family: Arial;
-	font-size: 12px; 
-}
-
-#footer a:hover
-{
-	text-decoration: underline;
 }
